--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mtasa-ts-types",
-  "version": "0.1.23",
+  "version": "0.1.24",
   "description": "",
   "keywords": [
     "mtasa",
@@ -12,6 +12,7 @@
     "**/*.d.ts"
   ],
   "devDependencies": {
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "typescript-to-lua": "^1.4.3"
   }
 }
